--- a/main.html
+++ b/main.html
@@ -8,6 +8,55 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form method ="post">
+		<label for="name">Name</label>
+		<input type  ="text" id="name" placeholder="Name" required>
+		
+		<label for="email">Email </label>
+		<input type ="Email" id="email" placeholder="Email" required>
+
+		<label for="gender">Gender</label>
+		<input type="radio" id="gender_m"  name="gender" >Male
+		<input type="radio" id="gender_f"  name="gender">Female
+
+		<label for="laptop">Laptop Brands </label>
+		
+		<select id="laptop" >
+			<option disabled selected>--Please choose an option--></option>
+			<option>Apple</option>
+			<option>Asus</option>
+			<option>HP</option>
+		</select>
+		
+
+
+		<label for="age">Age </label>
+		<input type ="number"  id="age" placeholder="Age" required>
+
+		<label for="dob">DOB </label>
+		<input type ="dob" id="dob" required>
+		
+
+
+
+		<label for="password">Password </label>
+		<input type ="password" id="password" placeholder="Password" required>
+
+
+
+		<button type="submit"> submit</button>
+		
+	</form>
+
+
+
+
+
+
+
+
+
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
