--- a/main.html
+++ b/main.html
@@ -16,8 +16,8 @@
 		<input type ="Email" id="email" placeholder="Email" required>
 
 		<label for="gender">Gender</label>
-		<input type="radio" id="gender_m"  name="gender" >Male
-		<input type="radio" id="gender_f"  name="gender">Female
+		<input type="radio" id="gender_m"  name="gender" required >Male
+		<input type="radio" id="gender_f"  name="gender" required>Female
 
 		<label for="laptop">Laptop Brands </label>
 		
@@ -45,6 +45,7 @@
 
 
 		<button type="submit"> submit</button>
+		<input type="url" id="portfolio"/>
 		
 	</form>
 
