--- a/main.html
+++ b/main.html
@@ -45,7 +45,7 @@
 
 
 		<button type="submit"> submit</button>
-		<input type="url" id="portfolio"/>
+		<label for="portfolio"> Portfolio</label>
 		
 	</form>
 
