--- a/main.html
+++ b/main.html
@@ -46,6 +46,8 @@
 
 		<button type="submit"> submit</button>
 		<label for="portfolio"> Portfolio</label>
+		<input type="url" id="portfolio"/>
+	
 		
 	</form>
 
